# json-razor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
json_razor/: __init__.py  cli.py  core.py  formats.py
tests/: test_core.py
tests/fixtures/: app.ndjson  events.json
tests/samples/: mixed.json  nested.json  openapi.yaml  services.yaml  simple.json
